Fix image line spacing in comments (GIF support) (#9328)

--- a/source/features/github-bugs.css
+++ b/source/features/github-bugs.css
@@ -259,6 +259,9 @@ review-thread-collapsible > .js-toggle-outdated-comments {
 	p ~ a > img {
 		margin-bottom: var(--base-size-16);
 	}
+	p ~ animated-image > a > img {
+		margin-bottom: var(--base-size-8);
+	}
 	p > a > img {
 		margin-block: var(--base-size-16);
 	}
